frontend secret santa

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,9 @@
 <head>
     <title>Secret Santa</title>
-</head>
-<body>
-    <p id="text">Click the button to add a name</p>
-    <input type="text" id="nameInput" placeholder="Enter a name">
-    <button onclick="add_persona()">Add name</button>
-    <button onclick="extract_random_name()">Extract name</button>
-
     <script src="http://localhost:9000/index.js"></script>
+</head>
 
+<body>
+    <h1>Your Secret Santa lists</h1>
+    <ul id="lists"></ul>
 </body>
-
